# ticktick-mcp

./: .gitignore  README.md  nixpacks.toml  pyproject.toml
src/: main.py
src/ticktick_mcp/: client.py  config.py  ticktick_client.py  unofficial_client.py
src/ticktick_mcp/tools/: project_tools.py  task_tools.py  unofficial_tools.py
