[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-mcp"
version = "0.2.0"
description = "MCP server for interacting with the TickTick API using official OpenAPI v1 endpoints."
authors = [
  { name="jen6", email="work.jen6@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.9.0",
    "httpx>=0.27.0",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.36.0",
    "ticktick-py>=2.0.0",
    "tzdata>=2024.1",
    "uvicorn>=0.27.0",
]

[project.scripts]
ticktick-mcp = "main:main"

[project.urls]
"Homepage" = "https://github.com/jen6/ticktick-mcp"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.sources]
ticktick-py = { git = "https://github.com/jen6/ticktick-py.git", rev = "main" }
